// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`handles source throwing non-NotFoundError 1`] = `
{
  "streams": [],
}
`;

exports[`handles source throwing non-NotFoundError 2`] = `
{
  "streams": [
    {
      "externalUrl": "https://example.com",
      "name": "WebStreamrMBG",
      "title": "🔗 ThrowingSource
❌ Request failed. Request-id: test.",
    },
  ],
}
`;

exports[`resolve adds error info 1`] = `
{
  "streams": [
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working1",
      "url": "https://example6.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working2",
      "url": "https://example9.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example1.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com",
    },
  ],
  "ttl": 1,
}
`;

exports[`resolve adds error info 2`] = `
{
  "streams": [
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example14.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
❌ Request to example14.com failed with status 418 (I'm a tea pot). Request-id: test.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example13.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
❌ Remote server example13.com has issues. We can't fix this, please try later again.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example12.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⏳ Request queue for example12.com is full. Please try again later or consider self-hosting.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example11.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
🐢 Request to example11.com timed out.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example10.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
❌ Request failed. Request-id: test.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example8.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
🚦 Too many recent timeouts when requesting example8.com. Please try again later.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example7.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
🚦 Request to example7.com was rate-limited. Please try again later or consider self-hosting.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example5.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ Request to example5.com was blocked. Reason: unknown",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example4.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ MediaFlow Proxy authentication failed. Please set the correct password.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example3.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ Request to example3.com was blocked. Reason: cloudflare_censor",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example2.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ Request to example2.com was blocked. Reason: cloudflare_challenge",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working1",
      "url": "https://example6.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working2",
      "url": "https://example9.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example1.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com",
    },
  ],
  "ttl": 1,
}
`;

exports[`resolve ignores not found errors 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve keeps fallback sources if needed 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-rgshows-rgshows-multi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Origin": "https://www.rgshows.ru",
          "Referer": "https://www.rgshows.ru/",
          "User-Agent": "Mozilla",
        },
      },
    },
    "name": "WebStreamrMBG 🌐 1080p",
    "title": "Wake Up Dead Man: A Knives Out Mystery (2025)
🔗 RgShows",
    "url": "https://cdn.1shows.app/e/DBkXNgRLXFBfRllF/master.m3u8",
  },
]
`;

exports[`resolve returns empty array if no source found anything 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns empty array if no source supported the type 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns info as stream if no sources were configured 1`] = `
{
  "streams": [
    {
      "externalUrl": "http://localhost/",
      "name": "WebStreamrMBG",
      "title": "⚠️ No sources found. Please re-configure the plugin.",
    },
  ],
}
`;

exports[`resolve returns sorted results 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-dropload-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1395864371,
    },
    "name": "WebStreamrMBG 🇩🇪 1080p",
    "title": "des-teufels-bad-2024
💾 1.3 GB 🔗 Dropload from MeineCloud",
    "url": "https://srv34.dropload.io/hls2/01/00197/lyo2h1snpe5c_h/master.m3u8?t=MZSqs3F338ocbM2eTs8X23s585dWcYuilGrNNcidNas&s=1749846846&e=14400&f=987607&srv=srv27&i=0.0&sp=0&ii=50.99.15.93&p1=srv27&p2=srv27",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-dropload-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 Dropload from MostraGuarda",
    "url": "https://srv34.dropload.io/hls2/01/00200/xsr90y2ltdyx_h/master.m3u8?t=rsJMeR8rtWZxFi_3DOdlt98U0rvAMincCe4-awDQzHE&s=1749846846&e=14400&f=1004116&srv=srv24&i=0.0&sp=0&ii=50.99.15.93&p1=srv24&p2=srv24",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-supervideo-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 SuperVideo from MostraGuarda",
    "url": "https://hfs311.serversicuro.cc/hls/,dnzpcjj427g4a3gyvbth53rxqgffbu4vol4o7gg7pskpzb6josghbkwhnisq,.urlset/master.m3u8",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-supervideo-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1073741824,
    },
    "name": "WebStreamrMBG 🇩🇪 720p",
    "title": "des-teufels-bad-2024
💾 1 GB 🔗 SuperVideo from MeineCloud",
    "url": "https://hfs309.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p577fze64mz3bsmdyq,.urlset/master.m3u8",
  },
]
`;

exports[`resolve returns sorted results 2`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-dropload-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1395864371,
    },
    "name": "WebStreamrMBG 🇩🇪 1080p",
    "title": "des-teufels-bad-2024
💾 1.3 GB 🔗 Dropload from MeineCloud",
    "url": "https://srv34.dropload.io/hls2/01/00197/lyo2h1snpe5c_h/master.m3u8?t=MZSqs3F338ocbM2eTs8X23s585dWcYuilGrNNcidNas&s=1749846846&e=14400&f=987607&srv=srv27&i=0.0&sp=0&ii=50.99.15.93&p1=srv27&p2=srv27",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-dropload-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 Dropload from MostraGuarda",
    "url": "https://srv34.dropload.io/hls2/01/00200/xsr90y2ltdyx_h/master.m3u8?t=rsJMeR8rtWZxFi_3DOdlt98U0rvAMincCe4-awDQzHE&s=1749846846&e=14400&f=1004116&srv=srv24&i=0.0&sp=0&ii=50.99.15.93&p1=srv24&p2=srv24",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-supervideo-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 SuperVideo from MostraGuarda",
    "url": "https://hfs311.serversicuro.cc/hls/,dnzpcjj427g4a3gyvbth53rxqgffbu4vol4o7gg7pskpzb6josghbkwhnisq,.urlset/master.m3u8",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-supervideo-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1073741824,
    },
    "name": "WebStreamrMBG 🇩🇪 720p",
    "title": "des-teufels-bad-2024
💾 1 GB 🔗 SuperVideo from MeineCloud",
    "url": "https://hfs309.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p577fze64mz3bsmdyq,.urlset/master.m3u8",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-external-de",
      "notWebReady": true,
    },
    "externalUrl": "https://mixdrop.ag/e/3nzwveprim63or6",
    "name": "WebStreamrMBG 🇩🇪 ⚠️ external",
    "title": "🔗 mixdrop.ag from MeineCloud",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-external-it",
      "notWebReady": true,
    },
    "externalUrl": "https://mixdrop.ag/e/vk196d6xfzwwo1",
    "name": "WebStreamrMBG 🇮🇹 ⚠️ external",
    "title": "🔗 mixdrop.ag from MostraGuarda",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-external-de",
      "notWebReady": true,
    },
    "externalUrl": "https://dood.to/e/sk1m9eumzyjj",
    "name": "WebStreamrMBG 🇩🇪 ⚠️ external",
    "title": "🔗 dood.to from MeineCloud",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-external-it",
      "notWebReady": true,
    },
    "externalUrl": "https://dood.to/e/37o04m33q3g5",
    "name": "WebStreamrMBG 🇮🇹 ⚠️ external",
    "title": "🔗 dood.to from MostraGuarda",
  },
]
`;

exports[`resolve returns source errors as stream 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns source errors as stream 2`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve skips fallback sources if possible 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fast-multi_en_hi",
      "notWebReady": true,
      "videoSize": 22430466703,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 2160p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.2160p.NF.WEB-DL.DUAL.DDP5.1.Atmos.DV.HDR.H.265-4kHDHub.Com.mkv
💾 20.89 GB 🔗 HubCloud (Fast) from 4KHDHub",
    "url": "https://pixel.hubcdn.fans/?id=847b1bdbbc93a9c7d0874f6e6c9b27ab10ce91107dba1274cc3dc0466b2cbebcaf3a1462ba47c4603aebefc2a5d706e201110bcdf6fbdd54f27846a48e9e264c049068908de1f0dd312c683197fe7af1fd1c4b06cc9ee6daacac6387fb7f24c7::551d69fe228b0ab2aa4b614e27209d8f",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fsl-multi_en_hi",
      "notWebReady": true,
      "videoSize": 22430466703,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 2160p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.2160p.NF.WEB-DL.DUAL.DDP5.1.Atmos.DV.HDR.H.265-4kHDHub.Com.mkv
💾 20.89 GB 🔗 HubCloud (FSL) from 4KHDHub",
    "url": "https://fsl.master.surf/03ee346a29b2b13afa1935bfbd6d05e8?token=1768483596",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fast-multi_en_hi",
      "notWebReady": true,
      "videoSize": 19295140577,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 2160p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.2160p.NF.WEB-DL.DUAL.DDP5.1.Atmos.H.265-4kHDHub.Com.mkv
💾 17.97 GB 🔗 HubCloud (Fast) from 4KHDHub",
    "url": "https://pixel.hubcdn.fans/?id=5ccc2933e8fae5e093c59b8e8e045c7e50d9b3784d6be8f8a79ddae17b0905a9a75cd0b0a7e0f9ad52e8536ff282a7bb1eec3fb8676412d809236d680a1d75760a157209a848be433e8eeec206ebc04221a1e2194fee473af5a9f279227dcbec::a4cb00f80c6c819e350102243cd62b17",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fsl-multi_en_hi",
      "notWebReady": true,
      "videoSize": 19295140577,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 2160p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.2160p.NF.WEB-DL.DUAL.DDP5.1.Atmos.H.265-4kHDHub.Com.mkv
💾 17.97 GB 🔗 HubCloud (FSL) from 4KHDHub",
    "url": "https://fsl.master.surf/e25e157cd10b4c203ad281a9280d5931?token=1768483596",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_pixelserver-multi_en_hi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://pixeldrain.dev/u/Kd5MqbDS",
        },
      },
      "videoSize": 19295140577,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 2160p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.2160p.NF.WEB-DL.DUAL.DDP5.1.Atmos.H.265-4kHDHub.Com.mkv
💾 17.97 GB 🔗 HubCloud (PixelServer) from 4KHDHub",
    "url": "https://pixeldrain.dev/api/file/Kd5MqbDS?download=",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fast-multi_en_hi",
      "notWebReady": true,
      "videoSize": 10018011217,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.H.265-4kHdHub.Com.mkv
💾 9.33 GB 🔗 HubCloud (Fast) from 4KHDHub",
    "url": "https://pixel.hubcdn.fans/?id=ac615ef26d6ec9f89337ab8c7b48049a8f02e26d3d5d1b78b2dce136f5000b7aa5ee9baade85646a795036a3e1d61b660d0f308703df7120147f299999900d896c9499855c2818a2ad46dd06f0d7965e3b73be919b9143324fd2fd610b871e1a::c3a6fbbe2dacff82473825bf9763d0c5",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fsl-multi_en_hi",
      "notWebReady": true,
      "videoSize": 10018011217,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.H.265-4kHdHub.Com.mkv
💾 9.33 GB 🔗 HubCloud (FSL) from 4KHDHub",
    "url": "https://fsl.master.surf/7a5fb128b139c4170291e04f0f6cd729?token=1768483596",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_pixelserver-multi_en_hi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://pixeldrain.dev/u/h7hpWDSW",
        },
      },
      "videoSize": 10018011217,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.H.265-4kHdHub.Com.mkv
💾 9.33 GB 🔗 HubCloud (PixelServer) from 4KHDHub",
    "url": "https://pixeldrain.dev/api/file/h7hpWDSW?download=",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fast-multi_en_hi",
      "notWebReady": true,
      "videoSize": 9985798963,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.H.264-4kHdHub.Com.mkv
💾 9.3 GB 🔗 HubCloud (Fast) from 4KHDHub",
    "url": "https://pixel.hubcdn.fans/?id=e8b09c5e964b413a5856f76143bca4d3008332510305700debc63c02458fe0676ced9df6b376b5711f8cd13cb2376ce0cd306fb111ea3e3c724ee8c766fbbfdfe5a8478815e3f518a51eb64d221bcddc48afc48d89b99551f7470c0191cad5c7::bef788898ff0bb6354b8c286427304b6",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fsl-multi_en_hi",
      "notWebReady": true,
      "videoSize": 9985798963,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.H.264-4kHdHub.Com.mkv
💾 9.3 GB 🔗 HubCloud (FSL) from 4KHDHub",
    "url": "https://fsl.master.surf/f956e46a610fa88657d505d07be917e9?token=1768483435",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_pixelserver-multi_en_hi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://pixeldrain.dev/u/yzyxiGzC",
        },
      },
      "videoSize": 9985798963,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.H.264-4kHdHub.Com.mkv
💾 9.3 GB 🔗 HubCloud (PixelServer) from 4KHDHub",
    "url": "https://pixeldrain.dev/api/file/yzyxiGzC?download=",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fast-multi_en_hi",
      "notWebReady": true,
      "videoSize": 5712306503,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.HDR-DV.H.265-4kHdHub.Com.mkv
💾 5.32 GB 🔗 HubCloud (Fast) from 4KHDHub",
    "url": "https://pixel.hubcdn.fans/?id=27d1f3b30d526b344889b788ffae3d51fbeeefb0240dba72b20332616764471b9f3378b97c50e29a40303e11a83ec93fabbd9a414440a6f5b0cadcf5f92ccb4aa9e7a58cee6ad0f281c276b2152cb304a22da70db2ffcabb4e0bd9016dc78e5f::76825098ba3a0258a23b95deb85a0617",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fsl-multi_en_hi",
      "notWebReady": true,
      "videoSize": 5712306503,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.HDR-DV.H.265-4kHdHub.Com.mkv
💾 5.32 GB 🔗 HubCloud (FSL) from 4KHDHub",
    "url": "https://fsl.master.surf/27df6ba61996f9a2e1725d5faa4a0cbb?token=1768483596",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_pixelserver-multi_en_hi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://pixeldrain.dev/u/gPsPz3B7",
        },
      },
      "videoSize": 5712306503,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.DDP5.1.Atmos-English.DDP5.1.Atmos.HDR-DV.H.265-4kHdHub.Com.mkv
💾 5.32 GB 🔗 HubCloud (PixelServer) from 4KHDHub",
    "url": "https://pixeldrain.dev/api/file/gPsPz3B7?download=",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fast-multi_en_hi",
      "notWebReady": true,
      "videoSize": 1374389534,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.AAC5.1-English.AAC5.1.AV1-4kHdHub.Com.mkv
💾 1.28 GB 🔗 HubCloud (Fast) from 4KHDHub",
    "url": "https://pixel.hubcdn.fans/?id=9c53ab82e6ccaa3ef17d926133dbd48ac8df473eae1ae78c5b0da8bdea9a8dd6361ba8802e9c76ad032b410ebb6235209e09d78f1343fb69247280b3166eedb826a399435ad0aa9bf1f65a092a353d0a37fdc171ec9f7afcfd6aa4ee1d068642::b96ed1eb7fbbdf3c62eefefa71f7a5f3",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_fsl-multi_en_hi",
      "notWebReady": true,
      "videoSize": 1374389534,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.AAC5.1-English.AAC5.1.AV1-4kHdHub.Com.mkv
💾 1.28 GB 🔗 HubCloud (FSL) from 4KHDHub",
    "url": "https://fsl.master.surf/f391f8beec927157dc784b261af950c2?token=1768483596",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-4khdhub-hubcloud_pixelserver-multi_en_hi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://pixeldrain.dev/u/XsNetT2P",
        },
      },
      "videoSize": 1374389534,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇳 1080p",
    "title": "Wake.Up.Dead.Man.A.Knives.Out.Mystery.2025.1080p.NF.WEB-DL.Hindi.AAC5.1-English.AAC5.1.AV1-4kHdHub.Com.mkv
💾 1.28 GB 🔗 HubCloud (PixelServer) from 4KHDHub",
    "url": "https://pixeldrain.dev/api/file/XsNetT2P?download=",
  },
]
`;

exports[`resolve uses priority for sorting 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-vixsrc-vixsrc-multi_en_it",
      "notWebReady": true,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇹 1080p",
    "title": "South Park S26E02
🔗 VixSrc",
    "url": "https://vixsrc.to/playlist/418073.m3u8?token=19d4fca75ba7f69b2e96fa429d264517&expires=1781602231&h=1",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-rgshows-rgshows-multi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Origin": "https://www.rgshows.ru",
          "Referer": "https://www.rgshows.ru/",
          "User-Agent": "Mozilla",
        },
      },
    },
    "name": "WebStreamrMBG 🌐 1080p",
    "title": "South Park S26E02
🔗 RgShows",
    "url": "https://sad.moriartis.store/v4/pk8/karuh/cf-master.1755845058.txt?t=121478a4&e=1765241578",
  },
]
`;
